MERGE: from 22578:22602 https://svn.centricsuite.com/webapp/branches/f-20070904-branch42fixes FIX: Database installation working, based on URL resource fixes FIX: Report was not sorting products on the Quote FIX: Bug fixes as submitted